[gd_scene load_steps=5 format=3 uid="uid://01glyyjjfhfy"]

[ext_resource type="Script" path="res://Scenes/Game/Activities/soda_machine.gd" id="1_8vrlw"]
[ext_resource type="Texture2D" uid="uid://btj36cs5rj8en" path="res://Assets/Images/SodaMachine/sodamachineWITHbuttons.png" id="1_lkusv"]
[ext_resource type="Texture2D" uid="uid://c8xkirib868xq" path="res://Assets/Images/backgrounds/sodabackground.png" id="2_kpuvy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f7xjj"]
size = Vector2(87, 261)

[node name="SodaMachine" type="Node2D"]
script = ExtResource("1_8vrlw")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = 462.0
offset_right = 1150.0
offset_bottom = 645.0
color = Color(0.519064, 0.333938, 0.926351, 1)

[node name="TextureRect2" type="TextureRect" parent="."]
offset_right = 3508.0
offset_bottom = 2480.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_kpuvy")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 3508.0
offset_bottom = 2480.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_lkusv")
expand_mode = 1

[node name="KelpBtn" type="Button" parent="."]
offset_left = 884.0
offset_top = 466.0
offset_right = 958.0
offset_bottom = 527.0
scale = Vector2(2, 2)

[node name="KelpDropZone" type="Area2D" parent="KelpBtn" groups=["drop_spots"]]
position = Vector2(37, 196.905)

[node name="CollisionShape2D" type="CollisionShape2D" parent="KelpBtn/KelpDropZone"]
shape = SubResource("RectangleShape2D_f7xjj")

[node name="SarsaBtn" type="Button" parent="."]
offset_left = 1065.0
offset_top = 466.0
offset_right = 1139.0
offset_bottom = 528.0
scale = Vector2(2, 2)

[node name="SarsaDropZone" type="Area2D" parent="SarsaBtn" groups=["drop_spots"]]
position = Vector2(37, 197.01)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SarsaBtn/SarsaDropZone"]
shape = SubResource("RectangleShape2D_f7xjj")

[node name="MolluskBtn" type="Button" parent="."]
offset_left = 1242.0
offset_top = 466.0
offset_right = 1316.0
offset_bottom = 527.0
scale = Vector2(2, 2)

[node name="MollDropZone" type="Area2D" parent="MolluskBtn" groups=["drop_spots"]]
position = Vector2(39, 197.07)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MolluskBtn/MollDropZone"]
shape = SubResource("RectangleShape2D_f7xjj")

[node name="LPBtn" type="Button" parent="."]
offset_left = 1430.0
offset_top = 466.0
offset_right = 1504.0
offset_bottom = 527.0
scale = Vector2(2, 2)

[node name="LPDropZone" type="Area2D" parent="LPBtn" groups=["drop_spots"]]
position = Vector2(36, 196.785)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LPBtn/LPDropZone"]
shape = SubResource("RectangleShape2D_f7xjj")
